--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (0.32) unstable; urgency=low
+
+  * Split dh_installdebfiles into 3 programs (dh_installdeb, dh_shlibdeps,
+    and dh_gencontrol). dh_installdebfiles still works, but is depricated.
+  * Added an examples/rules.indep file.
+  * examples/rules.multi: changed dh_du -a to dh_du -i in binary-indep
+    section.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 10 Dec 1997 19:53:13 -0500
+
 debhelper (0.31) unstable; urgency=low
 
   * Fixed man page typos #15685.
