--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -10,7 +10,7 @@ files used by the debian menu package into package build directories.
 .P
 It also automatically generates the postinst and postrm commands needed to 
 interface with the debian menu package. See 
-.BR dh_installdebfiles (1)
+.BR dh_installdeb (1)
 for an explanation of how this works.
 .P
 If a file named debian/menu exists, then it is installed into
