--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -23,7 +23,7 @@ scan the package build directory for files that have suid permissions, and
 will automatically register all files it finds.
 .P
 Note that this package modifies your postinst and postrm files. See
-.BR dh_installdebfiles (1)
+.BR dh_installdeb (1)
 for an explanation of how this works.
 .SH OPTIONS
 .TP
