--- a/TODO
+++ b/TODO
@@ -4,3 +4,5 @@
 * add a dh_debstd, which mimics debstd, but uses debhelper tools internally.
 * dh_du: change it so it doesn't grep for things with tabs in them. That's
   nasty. (and makes cut-and-paste from dh_du -v not work).
+* dh_compress: add --exclude "*.conf" type-thingy
+* info support for debhelper
