--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (0.35) unstable; urgency=low
+
+  * dh_lib: use dpkg-parsechangelog instead of parsing it by hand. This
+    makes a package build slower (by about 30 seconds, on average), so
+    I might remove it or optimize it if too many people yell at me. :-)
+  * dh_undocumented.1: note that it really links to undocumented.7.gz.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Dec 1997 22:19:39 -0500
+
 debhelper (0.34) unstable; urgency=low
 
   * Fixed typo #16215.
