--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -1,6 +1,6 @@
 .TH DH_UNDOCUMENTED 1
 .SH NAME
-dh_undocumented \- make symlinks to undocumented.7 man page
+dh_undocumented \- make symlinks to undocumented.7.gz man page
 .SH SYNOPSIS
 .B dh_undocumented
 .I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [manpage ...]"
