--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.34) unstable; urgency=low
+
+  * Fixed typo #16215.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 22 Dec 1997 14:41:46 -0500
+
 debhelper (0.33) unstable; urgency=low
 
   * examples/*: use prefix, instead of PREFIX, becuase autoconf uses that.
