--- a/dh_installdebfiles.1
+++ b/dh_installdebfiles.1
@@ -9,7 +9,7 @@ files into the DEBIAN directory in package build directories with the
 correct permissions, canculating shared library dependancies, and creating a
 control file.
 .P
-This program is depricated. It is now merely a wrapper around three other
+This program is deprecated. It is now merely a wrapper around three other
 programs, and you may replace any calls to this program by:
 .P
   dh_installdeb
