--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.36) unstable; urgency=low
+
+  * dh_undocumented: exit with an error message if the man page specified
+    does not have a section.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 27 Dec 1997 14:14:04 -0500
+
 debhelper (0.35) unstable; urgency=low
 
   * dh_lib: use dpkg-parsechangelog instead of parsing it by hand. This
