--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -9,14 +9,19 @@ dh_installdocs is a debhelper program that is responsible for installing
 documentation into usr/doc/package in package build directories.
 .P
 dh_installdocs automatically installs debian/copyright if it exists. If
-dh_installdocs is acting on multiple packages, debian/copyright files will be 
+dh_installdocs is acting on multiple packages, debian/copyright files will be
 installed into all packages.
 .P
-Any filenames specified as parameters, as well as debian/README.Debian (or
-debian/README.debian) and debian/TODO, if they exist, will be installed into
-the first binary package listed in debian/control, if dh_installdocs is acting
-on that package. Note that debian/TODO will be installed named TODO.Debian,
-if the package is not a debian native package.
+Any filenames specified as parameters will be installed into the first
+package dh_installdocs is told to act on. By default, this is the first 
+binary package in debian/control, but if you use -p, -i, or -a flags, it 
+will be the first package specified by those flags.
+.P
+Also,  debian/README.Debian (or debian/README.debian) and debian/TODO, if 
+they exist, will be installed into the first binary package listed in 
+debian/control, if dh_installdocs is acting on that package. Note that 
+debian/TODO will be installed named TODO.Debian, if the package is not a 
+debian native package.
 .P
 A file named debian/docs (for the first binary package in debian/control),
 or debian/package.docs (for each additional package in debian/control) can
@@ -39,8 +44,7 @@ Install files for the package named "package".
 Use "tmpdir" for package build directory. 
 .TP
 .B file ...
-Install these files as documentation into the first binary package listed in
-debian/control, if we are acting on that package.
+Install these files as documentation into the first package acted on.
 .SH NOTES
 The
 .B \-a
