--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -22,10 +22,12 @@ generates the necessary symlinks to
 .P
 The lists of man pages that need 
 .BR undocumented (7)
-symlinks can be specified in two ways. Any man page names specified as 
-parameters will be set up in the first binary package listed in 
-debian/control, if dh_installdocs is acting on that package. 
-Also, if a file named debian/undocumented (for the first binary package in 
+symlinks can be specified in two ways. Any man page names specified as
+parameters will be set up in the first package dh_undocumented is told
+to act on. By default, this is the first binary package in debian/control, 
+but if you use -p, -i, or -a flags, it will be the first package specified 
+by those flags.
+Also, a file named debian/undocumented (for the first binary package in 
 debian/control), or debian/package.undocumented (for each additional package 
 in debian/control) can list other man page names to set up.
 .SH OPTIONS
@@ -47,8 +49,7 @@ Use "tmpdir" for package build directory.
 .TP
 .B manpage ...
 Install undocumented man page symlinks for each of these man pages
-into the first binary package listed in debian/control, if we are acting on 
-that package.
+into the first package acted on.
 .SH NOTES
 The
 .B \-a
