--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (0.51) unstable; urgency=low
+
+  * dh_fixperms: make shared libraries non-executable, in accordance with
+    policy. (#16644)
+  * dh_makeshlibs: introduced a -V flag, which allows you to specify explicit
+    version requirements in the shlibs file.
+  * dh_{installdirs,installdocs,installexamples,suidregister,undocumented}:
+    Added a -A flag, which makes any files/directories specified on the
+    command line apply to ALL packages acted on.
+  * Updated Standards-Version to latest.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  5 Jan 1998 16:15:01 -0500
+
 debhelper (0.50) unstable; urgency=low
 
   * dh_makeshlibs: added -m parameter, which can force the major number
