--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -3,7 +3,7 @@
 dh_installexamples \- install example files into package build directories
 .SH SYNOPSIS
 .B dh_installexamples
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [file ...]"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [-A] [file ...]"
 .SH "DESCRIPTION"
 dh_installexamples is a debhelper program that is responsible for installing
 examples into usr/doc/package/examples in package build directories.
@@ -33,8 +33,13 @@ Install files for the package named "package".
 .B \-Ptmpdir
 Use "tmpdir" for package build directory. 
 .TP
+.B \-A
+Install any files specified by command line parameters in ALL packages
+acted on.
+.TP
 .B file ...
-Install these files as examples into the first package acted on.
+Install these files as examples into the first package acted on. (Or into all
+packages if -A is specified.)
 .SH NOTES
 The
 .B \-a
