--- a/README
+++ b/README
@@ -30,6 +30,7 @@ Remove that and replace it with something like:
 	dh_installcron
 	dh_installmanpages
 	dh_installchangelogs CHANGES
+	dh_movefiles
 	dh_strip
 	dh_compress
 	dh_fixperms
