--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.52) unstable; urgency=low
+
+  * dh_compress: compress file belongs in debian/. It was looking in ./
+    This has been broken since version 0.30.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  6 Jan 1998 14:08:31 -0500
+
 debhelper (0.51) unstable; urgency=low
 
   * dh_fixperms: make shared libraries non-executable, in accordance with
