--- a/dh_compress.1
+++ b/dh_compress.1
@@ -57,7 +57,7 @@ the control file will have their files compressed.
 The debian/compress file applies to the first binary package listed in your
 control file. For the other packages, you can make files named
 debian/package.compress, where "package" is the name of the package they 
-apply to.
+apply to. (This works for the first binary package too.)
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
