--- a/dh_installcron.1
+++ b/dh_installcron.1
@@ -8,9 +8,10 @@ dh_installcron \- install cron scripts into etc/cron.*
 dh_installcron is a debhelper program that is responsible for installing
 cron scripts into etc/cron.* in package build directories. The files 
 debian/cron.daily, debian/cron.weekly, and debian/cron.monthly are
-installed. If your package generates multiple binary packages, you can also
-use filenames like debian/package.cron.daily, where "package" is replaced
-with the name of the binary package this cron script goes into.
+installed. If your package generates multiple binary packages (or if you
+just prefer to do it), you can also use filenames like 
+debian/package.cron.daily, where "package" is replaced with the name of the 
+binary package this cron script goes into.
 .SH OPTIONS
 .TP
 .B \-v
