--- a/dh_builddeb.1
+++ b/dh_builddeb.1
@@ -10,19 +10,19 @@ dh_builddeb simply calls
 to build a .deb package or packages.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory, etc.
 .TP
-.B \-a
+.B \-a, \--arch
 Build all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Build all architecture independent packages.
 .TP
-.B \-ppackage
+.B -ppackage, \--package=package
 Build the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory.
 .SH NOTES
 The
