--- a/dh_gencontrol.1
+++ b/dh_gencontrol.1
@@ -16,22 +16,22 @@ You may prefer to simply run
 by hand.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-uparams
+.B \-uparams, \--update-rcd-params=params
 Pass "params" to 
 .BR dpkg-gencontrol (1)
 .SH NOTES
