--- a/dh_installdirs.1
+++ b/dh_installdirs.1
@@ -13,10 +13,9 @@ build directory of the first package dh_installdirs is told to act on. By
 default, this is the first binary package in debian/control, but if you use 
 -p, -i, or -a flags, it will be the first package specified by those flags.
 .P
-A file named debian/dirs (for the first binary package in debian/control),
-or debian/package.dirs (for each additional package in debian/control) can
-list other directories to be created. Separate the directory names with
-whitespace.
+A file named debian/package.dirs (debian/dirs may be used for the first
+binary package in debian/control) can list other directories to be created.
+Separate the directory names with whitespace.
 .P
 Be sure to only use directory names relative to the package build
 directory. Ie, "/usr/bin" should not be used, use "usr/bin" instead.
