--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -23,9 +23,8 @@ debian/control, if dh_installdocs is acting on that package. Note that
 debian/TODO will be installed named TODO.Debian, if the package is not a 
 debian native package.
 .P
-A file named debian/docs (for the first binary package in debian/control),
-or debian/package.docs (for each additional package in debian/control) can
-list other files to be installed.
+A file named debian/package.docs (debian/docs may be used for the first
+binary package in debian/control) can list other files to be installed.
 .SH OPTIONS
 .TP
 .B \-v
