--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -65,6 +65,9 @@ are not automatically installed.
 Files specified as parameters that contain spaces in their filenames will
 not be processed properly.
 .P
+By default, all man pages are installed into all binary packages, which is
+almost never what you really want (use -p to work around this).
+.P
 This is a "Do what I Mean" type program - you have been warned!
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
