--- a/dh_strip.1
+++ b/dh_strip.1
@@ -13,20 +13,20 @@ It assumes that files that have names like lib*_g.a are static libraries
 used in debugging, and will not strip them.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Strip files in all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Strip files in all architecture independent packages (likely, this is
 pointless :-).
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Strip files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
