--- a/dh_testdir.1
+++ b/dh_testdir.1
@@ -11,7 +11,7 @@ exists, as well as any other files you specify. If not,
 it exits with an error.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 This currently has no effect.
 .TP
