--- a/dh_testroot.1
+++ b/dh_testroot.1
@@ -11,7 +11,7 @@ error. Debian packages must be built as root, though you can use
 to work around this.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 This currently has no effect.
 .SH ENVIRONMENT
