--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -27,9 +27,9 @@ parameters will be set up in the first package dh_undocumented is told
 to act on. By default, this is the first binary package in debian/control, 
 but if you use -p, -i, or -a flags, it will be the first package specified 
 by those flags.
-Also, a file named debian/undocumented (for the first binary package in 
-debian/control), or debian/package.undocumented (for each additional package 
-in debian/control) can list other man page names to set up.
+Also, a file named debian/package.undocumented (or debian/undocumented, for 
+the first binary package in debian/control) can list other man page names to
+set up.
 .SH OPTIONS
 .TP
 .B \-v
