--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -3,7 +3,7 @@
 dh_installchangelogs \- install changelogs into package build directories
 .SH SYNOPSIS
 .B dh_installchangelogs
-.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] upstream"
+.I "[-v] [-a] [-i] [-ppackage] [-Ptmpdir] [upstream]"
 .SH "DESCRIPTION"
 dh_installchangelogs is a debhelper program that is responsible for installing
 changelogs into package build directories.
@@ -18,20 +18,23 @@ not a native debian package, then this upstream changelog will be installed
 as usr/doc/package/changelog in the package build directory.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install changelogs for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install changelogs for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install changelogs for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
+.TP
+.B upstream
+Instal this file as the upstream changelog.
 .SH NOTES
 The
 .B \-a
