--- a/dh_installcron.1
+++ b/dh_installcron.1
@@ -14,19 +14,19 @@ debian/package.cron.daily, where "package" is replaced with the name of the
 binary package this cron script goes into.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install cron files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install cron files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install cron files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
