--- a/dh_installdeb.1
+++ b/dh_installdeb.1
@@ -34,19 +34,19 @@ programs, such as
 , and are shell script fragments.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
