--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -13,9 +13,8 @@ package dh_installdirs is told to act on. By default, this is the first
 binary package in debian/control, but if you use -p, -i, or -a flags, it
 will be the first package specified by those flags.
 .P
-A file named debian/examples (for the first binary package in debian/control),
-or debian/package.examples (for each additional package in debian/control) can
-list other files to be installed.
+A file named debian/package.examples (debian/examples may be used for the
+first binary package in debian/control) can list other files to be installed.
 .SH OPTIONS
 .TP
 .B \-v
