--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -13,17 +13,16 @@ interface with the debian menu package. See
 .BR dh_installdeb (1)
 for an explanation of how this works.
 .P
-If a file named debian/menu exists, then it is installed into
+If a file named debian/package.menu exists, then it is installed into
 usr/lib/menu/package in the package build directory. This is a debian menu
 file.
 .P
-If a file named debian/menu-method exits, then it is installed into
+If a file named debian/package.menu-method exits, then it is installed into
 etc/menu-methods/package in the package build directory. This is a debian
 menu method file.
 .P
-For packages other than the first binary package listed in
-the control file, use debian/package.menu and debian/package.menu-method 
-instead (replace "package" with the name of the package.)
+For the first first binary package listed in the control file, you may use
+debian/menu and debian/menu-method instead.
 .SH OPTIONS
 .TP
 .B \-v
