--- a/dh_md5sums.1
+++ b/dh_md5sums.1
@@ -14,23 +14,23 @@ All files in DEBIAN/ are omitted from the md5sums file, as are all conffiles
 The md5sums file is installed with proper permissions and ownerships.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Generate md5sums files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Generate md5sums files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Generate md5sums file for the package named "package".
 .TP
-.B \-x
+.B \-x, \--include-conffiles
 Include conffiles in the md5sums list. Note that this is redundant, and
 included elsewhere in debian packages.
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
