--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -14,19 +14,19 @@ Files named debian/package.files list the files to be moved, separated by
 whitespace.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Move files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Move files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Move files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
