--- a/dh_shlibdeps.1
+++ b/dh_shlibdeps.1
@@ -17,22 +17,22 @@ prefer to simply run
 by hand.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-uparams
+.B \-uparams, \--dpkg-shlibdeps-params=params
 Pass "params" to 
 .BR dpkg-shlibdeps (1)
 .SH NOTES
