--- a/dh_clean.1
+++ b/dh_clean.1
@@ -11,22 +11,22 @@ other files, such as debian/substvars, debian/files, DEADJOE, emacs backup
 files, etc.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Clean up the package build directory for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Clean up the package build directory for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Clean up the package build directory for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory.
 .TP
-.B \-k
+.B \-k, \--keep
 Do not delete debian/files. When do you want to use this? Anytime you have a
 debian/rules that has 2 binary targets that build different .deb packages;
 for example, one target is binary-arch, and the other is binary-indep, or
