--- a/dh_du.1
+++ b/dh_du.1
@@ -13,19 +13,19 @@ debian installer program.
 The du file is installed with proper permissions and ownerships.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Generate du files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Generate du files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Generate du file for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
