--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -15,19 +15,19 @@ root, and it removes group and other write permission from all files.
 Finally, it removes execute permissions from any libraries that have it set.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Fix permissions for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Fix permissions for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Fix permissions for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
