--- a/dh_installdocs.1
+++ b/dh_installdocs.1
@@ -27,22 +27,22 @@ A file named debian/package.docs (debian/docs may be used for the first
 binary package in debian/control) can list other files to be installed.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-A
+.B \-A, \--all
 Install all files specified by command line parameters in ALL packages
 acted on.
 .TP
