--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -20,19 +20,19 @@ This is useful if by default it installs some man pages that you do not want
 to be installed.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install man pages into all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install man pages into all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install man pages into the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
 .B file ...
