--- a/dh_suidregister.1
+++ b/dh_suidregister.1
@@ -28,22 +28,22 @@ Note that this package modifies your postinst and postrm files. See
 for an explanation of how this works.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Register files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Register files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Register files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-A
+.B \-A, \--all
 Register any files specified by command line parameters in ALL packages
 acted on. I doubt anyone will find this useful, it's here for consitency
 with other debhelper programs.
