--- a/dh_undocumented.1
+++ b/dh_undocumented.1
@@ -32,22 +32,22 @@ the first binary package in debian/control) can list other man page names to
 set up.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install undocumented man page symlinks for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install undocumented man page symlinks for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install undocumented man page symlinks for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-A
+.B \-A, \--all
 Install undocumented man page symlinks for any man pages specified by 
 command line parameters in ALL packages acted on. I doubt anyone will find
 this useful, it's here for consitency with other debhelper programs.
