--- a/dh_compress.1
+++ b/dh_compress.1
@@ -31,19 +31,19 @@ customization of what files are compressed:
  	! -name "copyright"
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Compress files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Compress files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Compress files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .SH NOTES
 The
