--- a/dh_installdirs.1
+++ b/dh_installdirs.1
@@ -21,22 +21,22 @@ Be sure to only use directory names relative to the package build
 directory. Ie, "/usr/bin" should not be used, use "usr/bin" instead.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Create directories for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Create directories for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Create directories for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-A
+.B \-A, \--all
 Create any directories specified by command line parameters in ALL packages
 acted on.
 .TP
