--- a/dh_installexamples.1
+++ b/dh_installexamples.1
@@ -17,22 +17,22 @@ A file named debian/package.examples (debian/examples may be used for the
 first binary package in debian/control) can list other files to be installed.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install files for all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install files for all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install files for the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-A
+.B \-A, \--all
 Install any files specified by command line parameters in ALL packages
 acted on.
 .TP
@@ -48,7 +48,7 @@ and
 arguments are cumulative. If none are specified, then all packages listed in
 the control file will be effected.
 .P
-Note that dh_examples will happily copy entire directory hierarchies if
+Note that dh_installexamples will happily copy entire directory hierarchies if
 you ask it to (it uses cp -a internally). If it is asked to install a
 directory, it will install the complete contents of the directory.
 .SH ENVIRONMENT
