--- a/dh_installmenu.1
+++ b/dh_installmenu.1
@@ -25,22 +25,22 @@ For the first first binary package listed in the control file, you may use
 debian/menu and debian/menu-method instead.
 .SH OPTIONS
 .TP
-.B \-v
+.B \-v, \--verbose
 Verbose mode; show all commands that modify the package build directory.
 .TP
-.B \-a
+.B \-a, \--arch
 Install menu files into all architecture dependent packages.
 .TP
-.B \-i
+.B \-i, \--indep
 Install menu files into all architecture independent packages.
 .TP
-.B \-ppackage
+.B \-ppackage, \--package=package
 Install menu files into the package named "package".
 .TP
-.B \-Ptmpdir
+.B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
 .TP
-.B \-n
+.B \-n, \--noscripts
 Do not modify postinst/postrm scripts.
 .SH NOTES
 The
