--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (0.56) unstable; urgency=low
+
+  * dh_compress: Applied patch from Yann Dirson <ydirson@a2points.com>,
+    to make it not abort of one of the find's fails.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 15 Jan 1998 19:16:48 -0500
+
 debhelper (0.55) unstable; urgency=low
 
   * dh_clean: delete substvarsfiles probperly again (broken in 0.53). #17077
