--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (0.55) unstable; urgency=low
+
+  * dh_clean: delete substvarsfiles probperly again (broken in 0.53). #17077
+  * Added call to dh_movefiles, and a commented out call to dh_testversion,
+    to some of the sample rules files. #17076
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 14 Jan 1998 12:48:43 -0500
+
 debhelper (0.54) unstable; urgency=low
 
   * dh_lib: no longer call getopt(1) to parse options. I wrote my own
