--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (0.57) unstable; urgency=low
+
+  * Depend on perl 5.004 or greater (for Getopt::Long).
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 17 Jan 1998 02:12:06 -0500
+
 debhelper (0.56) unstable; urgency=low
 
   * dh_compress: Applied patch from Yann Dirson <ydirson@a2points.com>,
